# NginxTest

./: .gitignore  docker-compose.yml
app/: .env.example  Dockerfile  manage.py  pyproject.toml
app/NginxTest/: asgi.py  settings.py  urls.py  wsgi.py
app/NginxTest/management/commands/: upload_log.py
app/infra/: runserver.sh
app/log_module/: admin.py  apps.py  filters.py  models.py  paginators.py  serializers.py  urls.py  utils.py  views.py
app/log_module/migrations/: 0001_initial.py
